--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
     text-align: center;
 }
 
+h1 {
+    font-family: 'Bigelow Rules';
+    font-size: 72px;
+    color: rgb(64, 172, 136);
+}
 .App-logo {
     height: 40vmin;
     pointer-events: none;
